# analyze

./: .env.example  .gitignore  CLAUDE.md  README.md  REVIEW.md  config.yaml  progress.md  pyproject.toml  tasks.md
.claude/skills/claude-ui-system/: SKILL.md  anti-patterns.md  checklist.md
.planning/: ARCHITECTURE.md  BACKTEST_DESIGN.md  PROJECT.md  PYTHON_STANDARDS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/phases/02-code-review-command/: 02-REVIEW.md
.planning/phases/03-backtest/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-ui-renovation/: 04-01-PLAN.md  (+7 more)
.planning/reports/: MILESTONE_SUMMARY-v1.0.md  PROJECT_AUDIT_REPORT.md
data/: us_etf_universe.json
docs/: capabilities.md  claudedesign.md  design-audit-template.md  gsd 学习.md  当前进度.md
notebooks/: 01-explore-data.ipynb  02-backtest-validation.ipynb
skills/: local_api.md  tushare_api.md
specs/: quant_scoring_spec.md
src/fund_screener/: __init__.py  __main__.py  analytics.py  async_fetcher.py  cache.py  cli.py  config.py  error_queue.py  models.py  reporter.py  risk_metrics.py  scoring.py  screener.py  sector_fetcher.py  storage.py
tests/: test_analytics.py  test_async_fetcher.py  test_backtest.py  test_error_queue.py  test_factors.py  test_purchase_filter.py  test_reporter.py  test_screener.py  test_storage.py
web/: eslint.config.js  index.html  package.json  vite.config.ts
web/src/: index.css  main.tsx  routeTree.gen.ts
(+98 files in other folders)
